# usbttg_2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  run.py  settings.example.toml  swarm_architecture.md  swarm_architecture_plan.md
ai/: gemini.py  history.py  prompt_composer.py  reply_rules.py
ai/prompts/: reply.example.md  reply.md  reply_rules.example.md  reply_rules.md  start_topic.example.md  start_topic.md  system.example.md  system.md  topics.example.md  topics.md  wind_down_hint.example.md  wind_down_hint.md
ai/prompts/bots/: alexey_morozov.md  anna.md  anton_kovalev.md  artem_belyaev.md  darya_sokolova.md  dmitry.md  max.md  (+6 more)
config/: settings.example.toml
core/: config.py  logging.py  runtime_models.py
data/: reply_rules.md  topics.md  whitelist.md
scripts/: __init__.py  get_info.py  send_hello.py  update_profile.py
tests/: test_config.py  test_config_toml.py  test_exchange_store.py  test_gemini.py  test_get_info_script.py  test_handlers.py  test_history.py  test_logging.py  test_orchestrator.py  test_profile_update.py  test_prompt_composer.py  test_reply_router.py  test_reply_rules.py  test_runtime.py  test_scheduler.py  test_swarm_manager.py  test_windowed_qa.py
tests/reply_guard/: test_classifier.py  test_handler.py  test_queue.py  test_safety.py  test_worker.py
userbot/: client.py  exchange_store.py  handlers.py  orchestrator.py  reply_router.py  scheduler.py  swarm_manager.py  windowed_qa.py
userbot/reply_guard/: __init__.py  classifier.py  handler.py  queue.py  safety.py  worker.py
(+2 files in other folders)
